# AgentDock

./: .dockerignore  .env.example  .gitignore  README.md  build.error  new_plan.md  package.json  plan.md  project_analysis_report.md  systems_qa_validation_report.md  tsconfig.json  update.md
apps/agent-runtime/: pyproject.toml
compose/: docker-compose.dev.yml  docker-compose.yml
docker/: agent-base.Dockerfile  builder.dev.docker-compose.yml  builder.docker-compose.yml  frontend.Dockerfile  llm-gateway.Dockerfile  orchestrator.Dockerfile
docs/: api-reference.md  architecture.md  audit-report.md  development.md  generated-system-api.md  hardening.md  integration_walkthrough.md  linkedin_post.txt  mcp-registry.md  project_verification_report.md
scratch/: test-builder-e2e.js  test-results.json
template/: agent-base.Dockerfile
template/agent-runtime/agent-runtime/: pyproject.toml
template/agent-runtime/agent-runtime/app/: main.py
template/agent-runtime/agent-runtime/app/api/: routes.py
template/agent-runtime/agent-runtime/app/communication/: file_receiver.py  task_receiver.py
template/agent-runtime/agent-runtime/app/config/: loader.py  schema.py
template/agent-runtime/agent-runtime/app/llm/: agent_loop.py  client.py
template/agent-runtime/agent-runtime/app/mcp/: client.py
template/agent-runtime/agent-runtime/app/memory/: git.py  manager.py
template/agent-runtime/agent-runtime/app/rag/: manager.py
template/agent-runtime/agent-runtime/app/shell/: executor.py
template/agent-runtime/agent-runtime/app/triggers/: scheduler.py
(+157 files in other folders)
