[project]
name = "agentdock-runtime"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.7.0",
    "gitpython>=3.1.43",
    "apscheduler>=4.0.0a5",
    "structlog>=24.2.0",
    "watchfiles>=0.22.0",
    "python-multipart>=0.0.9",
    "mcp>=1.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]
